$Id: CHANGES,v 1.166 2002/02/27 09:47:48 stelian Exp $

Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
=======================================================================

1.	Fixed a bug in the QFA feature which could have caused 
	a bad tape positionning on restore (causing extra delays in
	restore). Credits go to Uwe Gohlke <uwe@ugsoft.de>.

2.	Added a small note in the dump man page specifying that
	there should be no white space between the option letter and
	the -j or -z parameter, thanks to Kenneth Porter <shiva@well.com>

3.	Made restore work with older versions of the readline library,
	by checking in configure for several extended symbols. Restore
	can now be compiled with a readline as old as the 2.0 release
	(though it may be a good idea to upgrade it to a more recent
	version...). Thanks to Andrew Donkin <ard@waikato.ac.nz> for
	reporting the build failures.

4.	Fixed a performance problem with the QFA file creation in
	dump, which made unnecessary seeks on the tape slowing down
	the dump. Thanks to Andrew Donkin <ard@waikato.ac.nz> for
	reporting this issue.

Changes between versions 0.4b26 and 0.4b27 (released February 15, 2002)
=======================================================================

1.	Fixed behaviour of dump when exceeding resource limits
	(SIGXFSZ treatment).

2.	Added the -L flag to restore to allow the user to specify a 
	maximal allowed number of miscompares when using restore
	with the -C option to check the backup.

3.	Detailed the manual entry for the -N option of restore.

4.	Added the -a flag to restore to make able doing unattended
	restores in -i or -x mode (automatically walks through the
	multiple dump volumes).

5.	Extended the QFA mode to work with local files and/or
	remote tapes and files. This way, restore can know in advance
	the tape number and the offset for the inodes to extract and 
	can minimize the extraction time by seeking directly to the 
	good tape/offset.
