@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.166 2002/02/27 09:47:48 stelian Exp $
+$Id: CHANGES,v 1.167 2002/03/11 10:17:42 stelian Exp $
 
 Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
 =======================================================================
@@ -22,6 +22,11 @@ Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
 	dump, which made unnecessary seeks on the tape slowing down
 	the dump. Thanks to Andrew Donkin <ard@waikato.ac.nz> for
 	reporting this issue.
+
+5.	Removed the inclusion of some kernel headers in the dump
+	source, which prevented the compile in some kernel/glibc
+	headers/architecture combination. Thanks to Bdale Garbee
+	<bdale@gag.com> for reporting the bug.
 
 Changes between versions 0.4b26 and 0.4b27 (released February 15, 2002)
 =======================================================================
